# roofline-benchmark

./: .gitignore  CMakeLists.txt  LICENSE  TODO.txt  benchmark.cuh  benchmark.hpp  benchmark_cuda.cuh  benchmark_hip.hip.hpp  benchmark_info.hpp  config.hpp  device_kernels.hpp.inc  exec_cpu.hpp  exec_cuda.cuh  exec_helper.hpp  exec_hip.hip.hpp  helper.cuh  main.cpp.inc  main.cu
cpu/: benchmark_cpu.hpp  exec_cpu.hpp  main.cpp
cuda/: benchmark_cuda.cuh  exec_cuda.cuh
hip/: benchmark_hip.hip.hpp  exec_hip.hip.hpp
results/: 20201124_A100_roofline_mixbench.txt  20201125_A100_roofline_d1.csv  20201125_A100_roofline_d1_mixbench.txt  20201125_A100_roofline_d3.csv  20201125_A100_roofline_d3_mixbench.txt  20201126_A100_roofline_d3_mixbench.txt  2020_11_24_RTX-2070.csv  20210225_1300_Radeon7.csv  20210225_1300_radeon7_debug.csv  20210225_1330_radeon7.csv  20210225_1330_radeon7_debug.csv  20210225_1331_radeon7.csv  20210225_1331_radeon7_debug.csv  20210225_1555_radeon7.csv  20210225_1556_radeon7.csv  20210311_1730_V100_summit.csv  20210312_0400_bwuni_xeon6230Gold_2s.csv  20210312_1955_MI100.csv  20210312_2000_MI100.csv  20210312_2200_bwuni_2s80t_rw.csv  20210312_2230_bwuni_2s80t_ro.csv  20210315_1003_radeon7.csv  20210316_1701_radeon7.csv  20210316_1711_radeon7.csv  20210316_1712_radeon7.csv  20210316_1720_radeon7.csv  20210316_1721_radeon7.csv  20210324_1020_AMD_EPYC_7742_2s256t_ro.csv  20210324_1030_AMD_EPYC_7742_2s256t_rw.csv  20210324_1130_AMD_EPYC_7742_2s256t_rw.csv  20220124_1931_V100_Summit.csv  20220623_1753_MI100.csv  20220623_1758_MI100.csv  20220624_1705_A100.csv  20220628_1355_MI100.csv  20220913_1900_MI250_Crusher.csv  20230503_1830_A100_guyot_roofline.csv  20230517_0900_A100_guyot_frsz2.csv  20230517_1030_A100_guyot_frsz2.csv  2024-03-15_H100_hexane.csv  (+4 more)
results/matlab/: plot_roofline.m
results/python/: plot_roofline.py
